seaqt/QtWidgets/gen_qheaderview.h

typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QEvent QEvent;
typedef struct QHeaderView QHeaderView;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QRect QRect;
typedef struct QSize QSize;
void QHeaderView_connect_sectionMoved(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int, int, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionResized(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int, int, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionPressed(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionClicked(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionEntered(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionDoubleClicked(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionCountChanged(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
void QHeaderView_connect_sectionHandleDoubleClicked(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QHeaderView_connect_geometriesChanged(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
void QHeaderView_connect_sortIndicatorChanged(QHeaderView* self, intptr_t slot, void (*callback)(intptr_t, int, int), void (*release)(intptr_t));
struct miqt_string QHeaderView_tr3(const char* s, const char* c, int n);
struct miqt_string QHeaderView_trUtf82(const char* s, const char* c);
struct miqt_string QHeaderView_trUtf83(const char* s, const char* c, int n);
QMetaObject* QHeaderView_virtualbase_metaObject(const void* self);
void* QHeaderView_virtualbase_metacast(void* self, const char* param1);
int QHeaderView_virtualbase_metacall(void* self, int param1, int param2, void** param3);
void QHeaderView_virtualbase_setModel(void* self, QAbstractItemModel* model);
QSize* QHeaderView_virtualbase_sizeHint(const void* self);
void QHeaderView_virtualbase_setVisible(void* self, bool v);
void QHeaderView_virtualbase_doItemsLayout(void* self);
void QHeaderView_virtualbase_reset(void* self);
void QHeaderView_virtualbase_currentChanged(void* self, QModelIndex* current, QModelIndex* old);
bool QHeaderView_virtualbase_event(void* self, QEvent* e);
void QHeaderView_virtualbase_paintEvent(void* self, QPaintEvent* e);
void QHeaderView_virtualbase_mousePressEvent(void* self, QMouseEvent* e);
void QHeaderView_virtualbase_mouseMoveEvent(void* self, QMouseEvent* e);
void QHeaderView_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* e);
void QHeaderView_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* e);
bool QHeaderView_virtualbase_viewportEvent(void* self, QEvent* e);
void QHeaderView_virtualbase_paintSection(const void* self, QPainter* painter, QRect* rect, int logicalIndex);